--- a/src/components/popular/Popular.css
+++ b/src/components/popular/Popular.css
@@ -102,3 +102,52 @@
   font-weight: 600;
   font-size: 14px;
 }
+
+/* media */
+
+@media (max-width: 940px) {
+  .text_container p {
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 820px) {
+  .popular_card .card_img {
+    height: 230px;
+  }
+  .popular_container span {
+    width: auto;
+  }
+  .text_container p {
+    font-size: 13px;
+  }
+}
+
+@media (max-width: 765px) {
+  .card_text {
+    padding: 10px;
+  }
+}
+
+@media (max-width: 735px) {
+  .popular_card_container {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 580px) {
+  .popular_container h1 {
+    font-size: 45px;
+  }
+}
+
+@media (max-width: 450px) {
+  .popular_card_container {
+    grid-template-columns: repeat(1, auto);
+    gap: 10px;
+  }
+
+  .popular_container h1 {
+    font-size: 35px;
+  }
+}
