add best taravel media style

--- a/src/components/bestTraveler/BestTraveler.css
+++ b/src/components/bestTraveler/BestTraveler.css
@@ -55,3 +55,41 @@
   width: 100%;
   height: 100%;
 }
+
+/* media */
+
+@media (max-width: 935px) {
+  .best_traveler_card_container {
+    grid-template-rows: repeat(2, 350px);
+  }
+}
+
+@media (max-width: 775px) {
+  .best_traveler_container span {
+    width: auto;
+  }
+}
+
+@media (max-width: 735px) {
+  .best_traveler_card_container {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+
+@media (max-width: 580px) {
+  .best_traveler_container h1 {
+    font-size: 45px;
+  }
+}
+
+@media (max-width: 450px) {
+  .best_traveler_container h1 {
+    font-size: 35px;
+  }
+
+  .best_traveler_card_container {
+    grid-template-columns: repeat(1, auto);
+    grid-template-rows: repeat(6, 350px);
+    gap: 10px;
+  }
+}
