--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -47,7 +47,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  background: #eeeeee1b;
+  background: #fffdfd4c;
   backdrop-filter: blur(3px);
   height: 50px;
   overflow: hidden;
@@ -62,6 +62,12 @@
   font-size: 15px;
   text-indent: 10px;
   font-weight: 100;
+  background: transparent;
+  color: #fff;
+}
+
+.input_box input::placeholder {
+  color: #fff;
 }
 
 .input_box button {
